# konnsearch

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  kafka_ingest.py  main.py  opensearch_index.py  pyproject.toml  requirements.txt  setup.py
conf/docker/sinks/: kafka.json  opensearch.json
conf/docker/sources/: kafka.json
conf/local/sinks/: kafka.json  opensearch.json
conf/local/sources/: jsonl.json  kafka.json
src/: event.py
src/connectors/: file.py  kafka.py  opensearch.py
src/konnsearch/: cli.py  connect.py  helpers.py
src/konnsearch/connectors/: __init__.py  file.py  kafka.py  opensearch.py
tests/: conftest.py  test_connect.py  test_event.py  test_helpers.py
tests/connectors/: test_file.py  test_kafka.py  test_opensearch.py
